# mechanical_arm_final

./: README.md  package.xml
scripts/: arm_command  image_process
urdf/: arm1.urdf.xacro
worlds/: willow_garage.world
